# pwap

./: .dockerignore  .env.example  .gitattributes  .gitignore  AI_analiz.txt  CLAUDE.md  CLAUDE_README_KRITIK.md  CODEBASE_STATUS_REPORT_2025-11-20.md  LICENSE  MULTISIG_CONFIG.md  PRESALE_README.md  PRODUCTION_READINESS.md  README.md  README_DEX_IMPROVEMENTS.md  SECURITY.md  USDT_MULTISIG_SETUP.md  check-asset-state.mjs  check-balances.mjs  check-founder-balances.mjs  check-hez-balance.mjs  check-pool-balances-detailed.mjs  check-pool.mjs  create-all-pools.mjs  create-beta-pool.js  create-beta-pool.mjs  create-pez-wusdt-pool.mjs  fix-supabase-rls-policy.sql  mint-and-create-pools.mjs  mint-whez.mjs  package-lock.json  package.json  setup-wsl-dev.ps1  verify-pool-state.mjs  wrap-hez-and-create-all-pools.mjs
.git-hooks/: README.md  pre-commit.example
.github/workflows/: ci-validation.yml  codeql.yml  deploy-cloudflare.yml  quality-gate.yml  security-check.yml
backend/: .env.example  .eslintrc.cjs  README.md  jest.config.js  package-lock.json  package.json
backend/integration-tests/: kyc.live.test.js  kyc.test.js  perwerde.live.test.js  pez-rewards.live.test.js  pez-treasury.live.test.js  presale.live.test.js  referral.live.test.js  staking-score.live.test.js  tiki.live.test.js  token-wrapper.live.test.js  trust.live.test.js  validator-pool.live.test.js  welati.live.test.js
backend/src/: index.js  server.js
docs/p2p/: P2P-BUILDING-PLAN.md
docs/presale/: PRESALE_GUIDE.md  PRESALE_TESTING.md
mobile/: .gitignore  .versionrc  App.tsx  CHANGELOG.md  FIX_SCHEMA_COMPATIBILITY.sql  PHASE_1_COMPLETE.md  README.md  SUPABASE_SCHEMA.sql  app.json  babel.config.cjs  check_existing_tables.cjs  check_schema_compatibility.cjs  check_tables_admin.cjs  eas.json  eslint.config.js  execute_sql.cjs  index.ts  jest.config.cjs  jest.config.js  jest.setup.before.cjs  jest.setup.cjs  jest.setup.js  metro.config.cjs  metro.config.js  node-pnp-wrapper.sh  package-lock.json  package.json  run_sql.sh  tsconfig.json  tsconfig.test.json
mobile/.maestro/: 01-onboarding.yaml  02-send-flow.yaml  03-receive-flow.yaml  04-dapp-browser.yaml  05-settings-network.yaml  README.md
mobile/__mocks__/: polkadot-extension-dapp.js  react-native-gesture-handler.js  react-native-reanimated.js  shared-lib-referral.js  shared-lib-scores.js  shared-lib-tiki.js  sonner.js
mobile/__tests__/: App.test.tsx
mobile/docs/: FAZ_1_SUMMARY.md  README.md
mobile/scripts/: fix-pezkuwi-packages.cjs  reset-wallet.js  version-updater.cjs
pezkuwi-sdk-ui/: README.md  eslint.config.js  package.json  tsconfig.base.json  tsconfig.build.json
pezkuwi-sdk-ui/scripts/: findPackages.cjs  i18nLint.cjs  i18nSort.cjs  imgConvert.mjs  ipfsUpload.mjs  robohash.cjs
scripts/: create_collection_42.js  p2p-e2e-test.py  register_parachain.js
scripts/tests/: tests-identity-kyc.rs  tests-perwerde.rs  tests-pez-rewards.rs  tests-pez-treasury.rs  tests-presale.rs  tests-referral.rs  tests-staking-score.rs  tests-tiki.rs  tests-token-wrapper.rs  tests-trust.rs  tests-validator-pool.rs  tests-welati.rs
shared/: README.md  package-lock.json
shared/blockchain/: endpoints.ts  index.ts  pezkuwi.ts  polkadot.ts
shared/components/: AsyncComponent.tsx
shared/constants/: index.ts
shared/i18n/: index.ts  translations.ts
shared/lib/: citizenship-workflow.ts  error-handler.ts  fraud-prevention.ts  guards.ts  identity.ts  ipfs.ts  kyc.ts  multisig.ts  p2p-fiat.ts  perwerde.ts  presale.ts  priceOracle.ts  referral.ts  scores.ts  staking.ts  tiki.ts  usdt.ts  validator-pool.ts  wallet.ts  welati.ts  xcm-bridge.ts  xcm-wizard.ts
shared/theme/: colors.ts
shared/types/: blockchain.ts  dex.ts  index.ts  tokens.ts
shared/utils/: auth.ts  dex.ts  format.ts  formatting.ts  index.ts  validation.ts
src/: App.tsx  main.tsx
src/components/: AccountBalance.tsx  AddLiquidityModal.tsx  AppLayout.tsx  HeroSection.tsx  NetworkStats.tsx  NftList.tsx  PoolDashboard.tsx  ReceiveModal.tsx  RemoveLiquidityModal.tsx  ReservesDashboard.tsx  (+5 more)
tests/: README.md  run-mobile-tests.sh  run-web-tests.sh
web/: .dockerignore  .env.example  Dockerfile  USDT_MULTISIG_SETUP.md  check_all_pools.mjs  eslint.config.js  generate-docs-structure.cjs  index.html  mimari.txt  package-lock.json  package.json  rebrand-rustdoc.cjs  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
web/public/docs/sdk/: Cargo.toml
web/public/docs/sdk/src/: external_resources.rs  lib.rs  meta_contributing.rs
web/public/docs/sdk/src/guides/: async_backing_guide.rs  cumulus_enabled_teyrchain.rs  enable_elastic_scaling.rs  enable_metadata_hash.rs  enable_pov_reclaim.rs  handling_teyrchain_forks.rs  mod.rs  pezcumulus_enabled_teyrchain.rs  xcm_enabled_teyrchain.rs  your_first_node.rs  your_first_runtime.rs
web/public/docs/sdk/src/guides/your_first_pallet/: mod.rs
web/public/docs/sdk/src/pezkuwi_sdk/: bizinikiwi.rs  cumulus.rs  frame_runtime.rs  mod.rs  pezcumulus.rs  pezkuwi.rs  smart_contracts.rs  substrate.rs  templates.rs  xcm.rs
web/public/docs/sdk/src/reference_docs/: blockchain_state_machines.rs  chain_spec_genesis.rs  cli.rs  custom_host_functions.rs  custom_runtime_api_rpc.rs  defensive_programming.rs  development_environment_advice.rs  extrinsic_encoding.rs  frame_benchmarking_weight.rs  frame_logging.rs  frame_offchain_workers.rs  frame_origin.rs  frame_pallet_coupling.rs  frame_pezpallet_coupling.rs  frame_runtime_types.rs  frame_runtime_upgrades_and_migrations.rs  frame_storage_derives.rs  frame_system_accounts.rs  frame_tokens.rs  glossary.rs  metadata.rs  mod.rs  omni_node.rs  pezframe_benchmarking_weight.rs  pezframe_system_accounts.rs  runtime_vs_smart_contract.rs  state.rs  trait_based_programming.rs  transaction_extensions.rs  umbrella_crate.rs  wasm_meta_protocol.rs
web/public/docs/sdk/src/reference_docs/chain_spec_runtime/: Cargo.toml  build.rs
web/public/docs/sdk/src/reference_docs/chain_spec_runtime/src/: lib.rs  pallets.rs  presets.rs  runtime.rs
web/public/docs/sdk/src/reference_docs/chain_spec_runtime/tests/: chain_spec_builder_tests.rs
(+3630 files in other folders)
