[package]
name = "pezkuwi-sdk-docs"
description = "The one stop shop for developers of the pezkuwi-sdk"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://docs.pezkuwichain.io/sdk/"
repository.workspace = true
authors.workspace = true
edition.workspace = true
# This crate is not publish-able to crates.io for now because of docify.
publish = false
version = "0.0.1"

[lints]
workspace = true

[dependencies]
# Needed for all FRAME-based code
codec = { workspace = true }
frame = { features = [
	"experimental",
	"runtime",
], workspace = true, default-features = true }
pallet-contracts = { workspace = true }
pallet-default-config-example = { workspace = true, default-features = true }
pallet-example-offchain-worker = { workspace = true, default-features = true }
pallet-examples = { workspace = true }
scale-info = { workspace = true }

# How we build docs in rust-docs
docify = { workspace = true }
serde_json = { workspace = true }
simple-mermaid = { workspace = true }

# Pezkuwi SDK deps, typically all should only be in scope such that we can link to their doc item.
chain-spec-builder = { workspace = true, default-features = true }
frame-benchmarking = { workspace = true }
frame-executive = { workspace = true }
frame-metadata-hash-extension = { workspace = true, default-features = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
kitchensink-runtime = { workspace = true }
log = { workspace = true, default-features = true }
node-cli = { workspace = true }
pallet-example-authorization-tx-extension = { workspace = true, default-features = true }
pallet-example-single-block-migrations = { workspace = true, default-features = true }
pezkuwi-sdk = { features = [
	"runtime-full",
], workspace = true, default-features = true }
subkey = { workspace = true, default-features = true }

# Substrate Client
sc-chain-spec = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-client-db = { workspace = true, default-features = true }
sc-consensus-aura = { workspace = true, default-features = true }
sc-consensus-babe = { workspace = true, default-features = true }
sc-consensus-beefy = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-consensus-manual-seal = { workspace = true, default-features = true }
sc-consensus-pow = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-rpc = { workspace = true, default-features = true }
sc-rpc-api = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }

substrate-wasm-builder = { workspace = true, default-features = true }

# Cumulus
cumulus-client-service = { workspace = true, default-features = true }
cumulus-pallet-aura-ext = { workspace = true, default-features = true }
cumulus-pallet-teyrchain-system = { workspace = true, default-features = true }
cumulus-pallet-weight-reclaim = { workspace = true, default-features = true }
cumulus-primitives-proof-size-hostfunction = { workspace = true, default-features = true }
teyrchain-info = { workspace = true, default-features = true }

# Omni Node
pezkuwi-omni-node-lib = { workspace = true, default-features = true }

# Pallets and FRAME internals
pallet-asset-conversion-tx-payment = { workspace = true, default-features = true }
pallet-asset-tx-payment = { workspace = true, default-features = true }
pallet-assets = { workspace = true, default-features = true }
pallet-aura = { workspace = true, default-features = true }
pallet-babe = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-collective = { workspace = true, default-features = true }
pallet-democracy = { workspace = true, default-features = true }
pallet-grandpa = { workspace = true, default-features = true }
pallet-nfts = { workspace = true, default-features = true }
pallet-preimage = { workspace = true, default-features = true }
pallet-scheduler = { workspace = true, default-features = true }
pallet-skip-feeless-payment = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
pallet-uniques = { workspace = true, default-features = true }

# Primitives
sp-api = { workspace = true, default-features = true }
sp-arithmetic = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-genesis-builder = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-offchain = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-runtime-interface = { workspace = true, default-features = true }
sp-std = { workspace = true, default-features = true }
sp-storage = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
sp-version = { workspace = true, default-features = true }
sp-weights = { workspace = true, default-features = true }

# XCM
pallet-xcm = { workspace = true }
xcm = { workspace = true, default-features = true }
xcm-builder = { workspace = true }
xcm-docs = { workspace = true }
xcm-executor = { workspace = true }
xcm-simulator = { workspace = true }

# Runtime guides
chain-spec-guide-runtime = { workspace = true, default-features = true }

# Templates
minimal-template-runtime = { workspace = true, default-features = true }
solochain-template-runtime = { workspace = true, default-features = true }

# local packages
first-runtime = { workspace = true, default-features = true }

[dev-dependencies]
assert_cmd = { workspace = true }
cmd_lib = { workspace = true }
rand = { workspace = true, default-features = true }
tokio = { workspace = true }

[features]
runtime-benchmarks = [
	"chain-spec-builder/runtime-benchmarks",
	"chain-spec-guide-runtime/runtime-benchmarks",
	"cumulus-client-service/runtime-benchmarks",
	"cumulus-pallet-aura-ext/runtime-benchmarks",
	"cumulus-pallet-teyrchain-system/runtime-benchmarks",
	"cumulus-pallet-weight-reclaim/runtime-benchmarks",
	"cumulus-primitives-proof-size-hostfunction/runtime-benchmarks",
	"first-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-executive/runtime-benchmarks",
	"frame-metadata-hash-extension/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"frame/runtime-benchmarks",
	"kitchensink-runtime/runtime-benchmarks",
	"minimal-template-runtime/runtime-benchmarks",
	"node-cli/runtime-benchmarks",
	"pallet-asset-conversion-tx-payment/runtime-benchmarks",
	"pallet-asset-tx-payment/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-aura/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-default-config-example/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-example-authorization-tx-extension/runtime-benchmarks",
	"pallet-example-offchain-worker/runtime-benchmarks",
	"pallet-example-single-block-migrations/runtime-benchmarks",
	"pallet-examples/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-skip-feeless-payment/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pezkuwi-omni-node-lib/runtime-benchmarks",
	"pezkuwi-sdk/runtime-benchmarks",
	"sc-chain-spec/runtime-benchmarks",
	"sc-cli/runtime-benchmarks",
	"sc-client-db/runtime-benchmarks",
	"sc-consensus-aura/runtime-benchmarks",
	"sc-consensus-babe/runtime-benchmarks",
	"sc-consensus-beefy/runtime-benchmarks",
	"sc-consensus-grandpa/runtime-benchmarks",
	"sc-consensus-manual-seal/runtime-benchmarks",
	"sc-consensus-pow/runtime-benchmarks",
	"sc-executor/runtime-benchmarks",
	"sc-network/runtime-benchmarks",
	"sc-rpc-api/runtime-benchmarks",
	"sc-rpc/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"solochain-template-runtime/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-genesis-builder/runtime-benchmarks",
	"sp-io/runtime-benchmarks",
	"sp-keyring/runtime-benchmarks",
	"sp-offchain/runtime-benchmarks",
	"sp-runtime-interface/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-version/runtime-benchmarks",
	"subkey/runtime-benchmarks",
	"substrate-wasm-builder/runtime-benchmarks",
	"teyrchain-info/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-docs/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"xcm-simulator/runtime-benchmarks",
	"xcm/runtime-benchmarks",
]
