[package]
name = "pez-chain-spec-guide-runtime"
description = "A minimal runtime for chain spec guide"
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
documentation.workspace = true

[dependencies]
codec = { workspace = true }
docify = { workspace = true }
pezframe-support = { workspace = true }
pezframe-system = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# this is a frame-based runtime, thus importing `frame` with runtime feature enabled.
pezframe = { features = ["experimental", "runtime"], workspace = true }

# genesis builder that allows us to interact with runtime genesis config
pezsp-api = { workspace = true }
pezsp-application-crypto = { features = ["serde"], workspace = true }
pezsp-core = { workspace = true }
pezsp-genesis-builder = { workspace = true }
pezsp-keyring = { workspace = true }
pezsp-runtime = { features = ["serde"], workspace = true }

[dev-dependencies]
cmd_lib = { workspace = true }
pezsc-chain-spec = { workspace = true, default-features = true }

[build-dependencies]
bizinikiwi-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"bizinikiwi-wasm-builder",
	"bizinikiwi-wasm-builder?/std",
	"codec/std",
	"pezframe-support/std",
	"pezframe-system/std",
	"pezframe/std",
	"pezsc-chain-spec/std",
	"pezsp-api/std",
	"pezsp-application-crypto/std",
	"pezsp-core/std",
	"pezsp-genesis-builder/std",
	"pezsp-keyring/std",
	"pezsp-runtime/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
]
runtime-benchmarks = [
	"bizinikiwi-wasm-builder?/runtime-benchmarks",
	"pezframe-support/runtime-benchmarks",
	"pezframe-system/runtime-benchmarks",
	"pezframe/runtime-benchmarks",
	"pezsc-chain-spec/runtime-benchmarks",
	"pezsp-api/runtime-benchmarks",
	"pezsp-application-crypto/runtime-benchmarks",
	"pezsp-genesis-builder/runtime-benchmarks",
	"pezsp-keyring/runtime-benchmarks",
	"pezsp-runtime/runtime-benchmarks",
]
try-runtime = [
	"pezframe-support/try-runtime",
	"pezframe-system/try-runtime",
	"pezframe/try-runtime",
	"pezsc-chain-spec/try-runtime",
	"pezsp-api/try-runtime",
	"pezsp-genesis-builder/try-runtime",
	"pezsp-keyring/try-runtime",
	"pezsp-runtime/try-runtime",
]
serde = []
experimental = []
tuples-96 = []
